<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ar_gripper</name>
  <version>0.1.0</version>
  <description>The ARgripper driver package</description>
  <maintainer email="alex@machinekoder.com">Alexander Rössler</maintainer>
  <license>BSD</license>

  <url>TODO</url>
  <author>Alexander Rössler</author>

  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
