<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ar_gripper_interfaces</name>
  <version>0.1.0</version>
  <description>ROS interfaces for the ARgripper driver</description>
  <maintainer email="alex@machinekoder.com">Alexander Rössler</maintainer>
  <license>BSD</license>

  <url>TODO</url>
  <author>Ruddick Lawrence</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
